Wed May 05 20:15:51 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/generate-perf-html.sh:

          Corrected order of commands to generate tables _after_ the data
          was processed.  Added in missing test run information.
 
Wed May  5 17:14:34 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        
          Moved the publisher->remove_associations call out of DataWriter
          locking scope to fix a deadlock issue due to reverse locking with 
          DataWriter lock and TransportImpl lock when remove/add associations
          are handled concurrently.
          
        * dds/DCPS/transport/framework/DataLink.cpp:
          
          Added locking for pub_map_.release_subscriber to make pub_map_
          update synchronized. This is a potential cause for a SEGV due
          to ReceiveListenerSet destructed during remove_associations.
            
Tue May 05 06:31:35 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/tests/thru/run_test.pl:

          Corrected typo that loaded incorrect configuration for multicast
          best effort.

Tue May 04 23:31:01 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/tests/thru/run_test.pl:

          Adjusted so the run_test.pl timeout is longer than the run_test
          timeout.  This should stop stranding testprocesses waiting on the
          multicast transports.

Tue May 04 20:42:29 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/plot-density.gp:
        * performance-tests/Bench/bin/plot-quantiles.gp:
        * performance-tests/Bench/bin/plot-test-results.sh:
        * performance-tests/Bench/bin/generate-perf-html.sh:
        * performance-tests/Bench/bin/generate-test-results.sh:

          Adding scripts to generate html files from results.

        * performance-tests/Bench/tests/latency/run_test.pl:
