@@ -36,8 +36,11 @@ sub transportName {
   # Lookup table for transport types.
   my $type = shift;
   return "UNKNOWN TRANSPORT TYPE"  if not $type;
+  return "TCP"      if $type eq "tcp";
   return "TCP"      if $type eq "SimpleTcp";
+  return "Multicast Best Effort"  if $type eq "mbe";
   return "Multicast Best Effort"  if $type eq "best effort multicast";
+  return "Multicast Reliable" if $type eq "mre";
   return "Multicast Reliable" if $type eq "reliable multicast";
   return "UDP" if $type eq "udp";
   return "UNKNOWN TRANSPORT TYPE";
@@ -122,9 +125,9 @@ die "Unable to open output: $nj_filename - $!"
 
       print NMJOUT "<tr class=\"data_tables\">" .
                    "<td class=\"data_tables\">$size</td>" .
-                   "<td class=\"data_tables\">" . 100 * $data->{$transport}->{$size}->{jitterdev} / $data->{$transport}->{$size}->{latencymean} . "</td>" .
-                   "<td class=\"data_tables\">" . 100 * $data->{$transport}->{$size}->{jittermin} / $data->{$transport}->{$size}->{latencymean} . "</td>" .
-                   "<td class=\"data_tables\">" . 100 * $data->{$transport}->{$size}->{jittermax} / $data->{$transport}->{$size}->{latencymean} . "</td></tr>\n";    }
+                   "<td class=\"data_tables\">" . sprintf("%.2e", 100 * $data->{$transport}->{$size}->{jitterdev} / $data->{$transport}->{$size}->{latencymean}) . "</td>" .
+                   "<td class=\"data_tables\">" . sprintf("%.2e", 100 * $data->{$transport}->{$size}->{jittermin} / $data->{$transport}->{$size}->{latencymean}) . "</td>" .
+                   "<td class=\"data_tables\">" . sprintf("%.2e", 100 * $data->{$transport}->{$size}->{jittermax} / $data->{$transport}->{$size}->{latencymean}) . "</td></tr>\n";    }
     print LATOUT "</table>\n\n";
     print JITOUT "</table>\n\n";
     print NMJOUT "</table>\n\n";
